--- a/index.html
+++ b/index.html
@@ -577,9 +577,9 @@
                     <i class="icon-pin"></i>
                 </div>
                 <h5>Where to find me</h5>
-                <p>3210 Perry Avenue Apt 1A
-                    <br>Bronx, NY
-                    <br>10467
+                <p>N/A at this time
+                    <br>Thank you for your
+                    <br>patience.
                 </p>
             </div>
             <div class="column-four tab-full collapse">
