--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/favicon.ico" />
+    <!-- Own Carousel
+   ================================================== -->
+    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+    <!-- Magnificent Popup
+   ================================================== -->
+    <link rel="stylesheet" href="magnific-popup/magnific-popup.css">
     <!-- script
    ================================================== -->
     <script src="js/pace.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
     <!-- Formspree meta
    ================================================== -->
     <meta name="referrer" content="origin" />
@@ -38,7 +46,8 @@
                         <li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
                         <li><a class="smoothscroll" href="#about" title="">About</a></li>
                         <li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
-                        <!-- <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li> -->
+                        <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
+                        <li><a class="smoothscroll" href="#photos" title="">Photos</a></li>
                         <li><a class="smoothscroll" href="#services" title="">Services</a></li>
                         <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
                     </ul>
@@ -359,6 +368,153 @@
         <!-- /resume-timeline -->
     </section>
     <!-- /features -->
+    <!-- Portfolio Section
+   ================================================== -->
+    <section id="portfolio">
+        <div class="row section-intro">
+            <div class="column-twelve">
+                <h5>Portfolio</h5>
+                <h1>Check Out Some of My Works.</h1>
+                <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+            </div>
+        </div>
+        <!-- /section-intro-->
+        <div class="row portfolio-content">
+            <div class="column-twelve">
+                <!-- portfolio-wrapper -->
+                <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+                    <div class="blockedGrid folio-item">
+                        <div class="item-wrap">
+                            <img src="images/portfolio/battleship.jpg" alt="Battleship">
+                            <a href="#modal-01" class="overlay">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">Battleship</h3>
+                                        <span class="folio-types">
+                                          Game Development
+                                       </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /folio-item -->
+                    <div class="blockedGrid folio-item">
+                        <div class="item-wrap">
+                            <img src="images/portfolio/soundvoid.jpg" alt="Soundvoid">
+                            <a href="#modal-02" class="overlay">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">Project Soundvoid</h3>
+                                        <span class="folio-types">
+                                          Game Development
+                                      </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /folio-item -->
+                    <div class="blockedGrid folio-item">
+                        <div class="item-wrap">
+                            <img src="images/portfolio/theTandon.jpg" alt="theTandon">
+                            <a href="#modal-03" class="overlay">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">The Tandon</h3>
+                                        <span class="folio-types">
+                                          Web Design
+                                      </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- modal popups - begin
+                ============================================================= -->
+                    <div id="modal-01" class="popup-modal slider mfp-hide">
+                        <div class="media">
+                            <img src="images/portfolio/modals/m-battleship.jpg" alt="" />
+                        </div>
+                        <div class="description-box">
+                            <h4>Battleship</h4>
+                            <p>A single player version of the popular game battleship. Limited with only 50 turns. Do you think you can be the best captain?</p>
+                            <div class="categories">Game Development</div>
+                        </div>
+                        <div class="link-box">
+                            <a href="mahindrapersaud.me/battleship">Details</a>
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                        </div>
+                    </div>
+                    <!-- /modal-01 -->
+                    <div id="modal-02" class="popup-modal slider mfp-hide">
+                        <div class="media">
+                            <img src="images/portfolio/modals/m-soundvoid.jpg" alt="" />
+                        </div>
+                        <div class="description-box">
+                            <h4>Project Soundvoid</h4>
+                            <p>Project Soundvoid is a game which combines the tactices of escape the room with those of echo location. Do you think you can escape before being caught?</p>
+                            <div class="categories">Game Development</div>
+                        </div>
+                        <div class="link-box">
+                            <a href="#">Details</a>
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                        </div>
+                    </div>
+                    <!-- /modal-02 -->
+                    <div id="modal-03" class="popup-modal slider mfp-hide">
+                        <div class="media">
+                            <img src="images/portfolio/modals/m-theTandon.jpg" alt="" />
+                        </div>
+                        <div class="description-box">
+                            <h4>The Tandon</h4>
+                            <p>The Tandon is a website created to help assist and aid students for their courses. It is meant to help reduce clutter, improve productivivty, and allow students to understand the classes they're currently undergoing and planning to take.</p>
+                            <div class="categories">Web Design</div>
+                        </div>
+                        <div class="link-box">
+                            <a href="#">Details</a>
+                            <a href="#" class="popup-modal-dismiss">Close</a>
+                        </div>
+                    </div>
+                    <!-- /modal-03 -->
+                    <!-- modal popups - end
+                ============================================================= -->
+                </div>
+                <!-- /portfolio-wrapper -->
+            </div>
+            <!-- /twelve -->
+        </div>
+        <!-- /portfolio-content -->
+    </section>
+    <!-- /portfolio -->
+    <!-- Photos section 
+   =================================================== -->
+    <section id="photos" class="gray-section">
+        <div class="row section-intro">
+            <div class="column-twelve">
+                <h5> A few photos of myself and those important to me! </h5>
+            </div>
+        </div>
+        <!-- /section-intro -->
+        <div class="row photos-content">
+            <div class="column-twelve">
+                <div class="owl-carousel owl-theme">
+                    <img src="images/carousel/1.jpg">
+                    <img src="images/carousel/2.jpg">
+                    <img src="images/carousel/3.jpg">
+                    <img src="images/carousel/4.jpg">
+                    <img src="images/carousel/5.jpg">
+                    <img src="images/carousel/6.jpg">
+                    <img src="images/carousel/7.jpg">
+                    <img src="images/carousel/8.jpg">
+                    <img src="images/carousel/9.jpg">
+                </div>
+                <!-- /owl-carousel -->
+            </div>
+        </div>
+        <!-- /photo-content -->
+    </section>
+    <!-- /Photos section -->
     <!-- services Section
    ================================================== -->
     <section id="services">
@@ -372,7 +528,7 @@
         <!-- /section-intro -->
         <div class="row services-content">
             <div class="column-twelve">
-                <div id="slider" class="carousel services-list">
+                <div id="slider" class="services-list">
                     <div class="column-four">
                         <div class="service">
                             <span class="icon"><i class="icon-earth"></i></span>
@@ -586,7 +742,7 @@
                     <i class="icon-mail"></i>
                 </div>
                 <h5>Email Me At</h5>
-                <p>mahindra.persaud@nyu.edu
+                <p>mahindrapersaud1@gmail.com
                 </p>
             </div>
             <div class="column-four tab-full">
@@ -621,9 +777,13 @@
     </footer>
     <!-- Java Script
    ================================================== -->
+    <!-- Owl Slider
+   ================================================== -->
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+    <script src="magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
 </body>
 
 </html>
