--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                             <span class="icon"><i class="icon-toggles"></i></span>
                             <div class="service-content">
                                 <h3>UI/UX Design</h3>
-                                <p class="service-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                                <p class="service-description">Need to assistance in creating a better user friendly experience? I'll be more than glad to help assist you in doing so.
                                 </p>
                             </div>
                         </div>
@@ -586,7 +586,7 @@
                             <span class="icon"><i class="icon-image"></i></span>
                             <div class="service-content">
                                 <h3>Graphics Design</h3>
-                                <p class="service-description">Need a logo created? Maybe a banner or an image to display. You've come to the right place. I specialize in creation of utter bull.
+                                <p class="service-description">Need a logo created? Maybe a banner or an image to display. I'm more than happy to assist in aiding you in creation of a logo you'd love.
                                 </p>
                             </div>
                         </div>
