--- a/index-DESKTOP-53CI1VA.html
+++ b/index-DESKTOP-53CI1VA.html
@@ -10,14 +10,30 @@
     <!-- mobile specific metas
    ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- Bootstrap sheets
+   ================================================== -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!-- CSS
    ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" href="images/favicon.ico" />
+    <!-- Own Carousel
+   ================================================== -->
+    <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+    <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+    <!-- Magnificent Popup
+   ================================================== -->
+    <link rel="stylesheet" href="magnific-popup/magnific-popup.css">
     <!-- script
    ================================================== -->
     <script src="js/pace.min.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <!-- Formspree meta
+   ================================================== -->
+    <meta name="referrer" content="origin" />
 </head>
 
 <body id="top">
@@ -35,7 +51,8 @@
                         <li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
                         <li><a class="smoothscroll" href="#about" title="">About</a></li>
                         <li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
-                        <!-- <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li> -->
+                        <li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
+                        <li><a class="smoothscroll" href="#photos" title="">Photos</a></li>
                         <li><a class="smoothscroll" href="#services" title="">Services</a></li>
                         <li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
                     </ul>
@@ -356,6 +373,167 @@
         <!-- /resume-timeline -->
     </section>
     <!-- /features -->
+    <!-- Portfolio Section
+   ================================================== -->
+    <section id="portfolio">
+        <div class="row section-intro">
+            <div class="column-twelve">
+                <h5>Portfolio</h5>
+                <h1>Check Out Some of My Works.</h1>
+                <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+            </div>
+        </div>
+        <!-- /section-intro-->
+        <div class="row portfolio-content">
+            <div class="column-twelve">
+                <!-- portfolio-wrapper -->
+                <div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+                    <div class="blockedGrid folio-item">
+                        <div class="item-wrap">
+                            <img src="images/portfolio/battleship.jpg" alt="Battleship">
+                            <a href="#modal-01" class="overlay" data-toggle="modal" data-target="#modal-01">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">Battleship</h3>
+                                        <span class="folio-types">
+                                          Game Development
+                                       </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /folio-item -->
+                    <div class="blockedGrid folio-item">
+                        <div class="item-wrap">
+                            <img src="images/portfolio/soundvoid.png" alt="Soundvoid">
+                            <a href="#modal-02" class="overlay" data-toggle="modal" data-target="#modal-02">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">Project Soundvoid</h3>
+                                        <span class="folio-types">
+                                          Game Development
+                                      </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- /folio-item -->
+                    <div class="blockedGrid folio-item">
+                        <div class="item-wrap">
+                            <img src="images/portfolio/theTandon.png" alt="theTandon">
+                            <a href="#modal-03" class="overlay" data-toggle="modal" data-target="#modal-03">
+                                <div class="folio-item-table">
+                                    <div class="folio-item-cell">
+                                        <h3 class="folio-title">The Tandon</h3>
+                                        <span class="folio-types">
+                                          Web Design
+                                      </span>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <!-- modal popups - begin
+                ============================================================= -->
+                    <div id="modal-01" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header media">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <img src="images/portfolio/modals/m-battleship.jpg" alt="" />
+                                </div>
+                                <div class="modal-body description-box">
+                                    <h4>Battleship</h4>
+                                    <p>A single player version of the popular game battleship. Limited with only 50 turns. Do you think you can be the best captain?</p>
+                                    <div class="categories">Game Development</div>
+                                </div>
+                                <div class="modal-footer link-box">
+                                    <a href="battleship/index.html">Details</a>
+                                    <a href="#" data-dismiss="modal">Close</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /modal-01 -->
+                    <div id="modal-02" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header media">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <img src="images/portfolio/modals/m-soundvoid.png" alt="" />
+                                </div>
+                                <div class="modal-body description-box">
+                                    <h4>Project Soundvoid</h4>
+                                    <p>Project Soundvoid is a game which combines the tactices of escape the room with those of echo location. Do you think you can escape before being caught?</p>
+                                    <div class="categories">Game Development</div>
+                                </div>
+                                <div class="modal-footer link-box">
+                                    <a href="#">Details</a>
+                                    <a href="#" data-dismiss="modal">Close</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /modal-02 -->
+                    <div id="modal-03" class="modal fade" role="dialog">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header media">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    <img src="images/portfolio/modals/m-theTandon.png" alt="" />
+                                </div>
+                                <div class="modal-body description-box">
+                                    <h4>The Tandon</h4>
+                                    <p>The Tandon is a website created to help assist and aid students for their courses. It is meant to help reduce clutter, improve productivivty, and allow students to understand the classes they're currently undergoing and planning to take.</p>
+                                    <div class="categories">Web Design</div>
+                                </div>
+                                <div class="modal-footer link-box">
+                                    <a href="#">Details</a>
+                                    <a href="#" data-dismiss="modal">Close</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /modal-03 -->
+                    <!-- modal popups - end
+                ============================================================= -->
+                </div>
+                <!-- /portfolio-wrapper -->
+            </div>
+            <!-- /twelve -->
+        </div>
+        <!-- /portfolio-content -->
+    </section>
+    <!-- /portfolio -->
+    <!-- Photos section 
+   =================================================== -->
+    <section id="photos" class="gray-section">
+        <div class="row section-intro">
+            <div class="column-twelve">
+                <h5> A few photos of myself and those important to me! </h5>
+            </div>
+        </div>
+        <!-- /section-intro -->
+        <div class="row photos-content">
+            <div class="column-twelve">
+                <div class="owl-carousel">
+                    <div><img src="images/carousel/1.jpg"></div>
+                    <div><img src="images/carousel/2.jpg"></div>
+                    <div><img src="images/carousel/3.jpg"></div>
+                    <div><img src="images/carousel/4.jpg"></div>
+                    <div><img src="images/carousel/5.jpg"></div>
+                    <div><img src="images/carousel/6.jpg"></div>
+                    <div><img src="images/carousel/7.jpg"></div>
+                    <div><img src="images/carousel/8.jpg"></div>
+                </div>
+                <!-- /owl-carousel -->
+            </div>
+        </div>
+        <!-- /photo-content -->
+    </section>
+    <!-- /Photos section -->
     <!-- services Section
    ================================================== -->
     <section id="services">
@@ -369,7 +547,7 @@
         <!-- /section-intro -->
         <div class="row services-content">
             <div class="column-twelve">
-                <div id="slider" class="carousel services-list">
+                <div id="slider" class="services-list">
                     <div class="column-four">
                         <div class="service">
                             <span class="icon"><i class="icon-earth"></i></span>
@@ -397,7 +575,7 @@
                             <span class="icon"><i class="icon-toggles"></i></span>
                             <div class="service-content">
                                 <h3>UI/UX Design</h3>
-                                <p class="service-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+                                <p class="service-description">Need to assistance in creating a better user friendly experience? I'll be more than glad to help assist you in doing so.
                                 </p>
                             </div>
                         </div>
@@ -408,7 +586,7 @@
                             <span class="icon"><i class="icon-image"></i></span>
                             <div class="service-content">
                                 <h3>Graphics Design</h3>
-                                <p class="service-description">Need a logo created? Maybe a banner or an image to display. You've come to the right place. I specialize in creation of utter bull.
+                                <p class="service-description">Need a logo created? Maybe a banner or an image to display. I'm more than happy to assist in aiding you in creation of a logo you'd love.
                                 </p>
                             </div>
                         </div>
@@ -543,26 +721,22 @@
         <div class="row contact-form">
             <div class="column-twelve">
                 <!-- form -->
-                <form name="contactForm" id="contactForm" method="post" action="">
+                <form name="contactForm" id="contactForm" method="post" action="http://formspree.io/mahindrapersaud1@gmail.com">
                     <fieldset>
                         <div class="form-field">
-                            Name:&nbsp;&nbsp;
-                            <input name="contactName" type="text" id="contactName" placeholder="" value="" minlength="2 " required="">
+                            Name:
+                            <input name="name" type="text" id="contactName">
                         </div>
                         <div class="form-field">
-                            Email:&nbsp;&nbsp;&nbsp;
-                            <input name="contactEmail" type="email" id="contactEmail" placeholder="" value="" required="">
+                            Email:
+                            <input name="_replyto" type="email" id="contactEmail">
+                        </div>
+                        <br />
+                        <div class="form-field">
+                            <textarea name="message" id="contactMessage" placeholder=">message" rows="10" cols="50"></textarea>
                         </div>
                         <div class="form-field">
-                            Subject:
-                            <input name="contactSubject" type="text" id="contactSubject" placeholder="" value="">
-                            <br/>
-                        </div>
-                        <div class="form-field">
-                            <textarea name="contactMessage" id="contactMessage" placeholder=">message" rows="10" cols="50" required=""></textarea>
-                        </div>
-                        <div class="form-field">
-                            <button class="submitform ">Submit</button>
+                            <input type="submit" name="send" class="submitform">
                         </div>
                     </fieldset>
                 </form>
@@ -582,12 +756,12 @@
                     <br>patience.
                 </p>
             </div>
-            <div class="column-four tab-full collapse">
+            <div class="column-four tab-full">
                 <div class="icon">
                     <i class="icon-mail"></i>
                 </div>
                 <h5>Email Me At</h5>
-                <p>mahindra.persaud@nyu.edu
+                <p>mahindrapersaud1@gmail.com
                 </p>
             </div>
             <div class="column-four tab-full">
@@ -622,7 +796,11 @@
     </footer>
     <!-- Java Script
    ================================================== -->
+    <!-- Owl Slider
+   ================================================== -->
     <script src="js/jquery-2.1.3.min.js"></script>
+    <script src="magnific-popup/jquery.magnific-popup.js"></script>
+    <script src="owlcarousel/owl.carousel.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
 </body>
