--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                             <span class="icon"><i class="icon-toggles"></i></span>
                             <div class="service-content">
                                 <h3>UI/UX Design</h3>
-                                <p class="service-description">Need to assistance in creating a better user friendly experience? I'll be more than glad to help assist you in doing so.
+                                <p class="service-description">Need to assistance in creating a better user friendly experience? Do you like the user expereince on this site? I'll be more than glad to help assist you in doing so. 
                                 </p>
                             </div>
                         </div>
