changed some stuff

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8">
-    <title>Samael's Sanctum</title>
+    <title>Mahindra Persaud</title>
     <meta name="description" content="Personal CV">
     <meta name="author" content="Mahindra Persaud">
     <!-- mobile specific metas
@@ -44,7 +44,7 @@
             <div class="top-bar">
                 <a class="menu-toggle" href="#"><span>Menu</span></a>
                 <div class="logo">
-                    <a href="index.html">Sanctum</a>
+                    <a href="index.html">Guide</a>
                 </div>
                 <nav id="main-nav-wrap">
                     <ul class="main-navigation">
