--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <div class="column-twelve">
                 <h5>Portfolio</h5>
                 <h1>Check Out Some of My Works.</h1>
-                <p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+                <p class="lead">These are some of the personal projects I have worked on either by myself or with a team. If you would like to inquire about any of them feel free to ask.</p>
             </div>
         </div>
         <!-- /section-intro-->
