removed phone number

--- a/index.html
+++ b/index.html
@@ -768,7 +768,9 @@
                     <i class="icon-phone"></i>
                 </div>
                 <h5>Call Me At</h5>
-                <p>Mobile: (347)-607-4950
+                <p>N/A at this time
+                    <br>Thank you for your
+                    <br>patience.
                 </p>
             </div>
         </div>
