--- a/index.html
+++ b/index.html
@@ -433,11 +433,11 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/battlebuilders/bb1.png" alt="battlebuilders">
+                            <img src="images/portfolio/bb1.png" alt="battlebuilders">
                             <a href="#modal-03" class="overlay" data-toggle="modal" data-target="#modal-04">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
-                                        <h3 class="folio-title">The Tandon</h3>
+                                        <h3 class="folio-title">Battle Builders</h3>
                                         <span class="folio-types">
                                           Game Development
                                       </span>
@@ -449,11 +449,11 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/pulse/pulse3.png" alt="pulse">
+                            <img src="images/portfolio/pulse3.png" alt="pulse">
                             <a href="#modal-03" class="overlay" data-toggle="modal" data-target="#modal-05">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
-                                        <h3 class="folio-title">The Tandon</h3>
+                                        <h3 class="folio-title">Pulse</h3>
                                         <span class="folio-types">
                                           Game Development
                                       </span>
@@ -465,13 +465,13 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/rpws/rpws3.png" alt="rpws">
+                            <img src="images/portfolio/rpws3.png" alt="rpws">
                             <a href="#modal-03" class="overlay" data-toggle="modal" data-target="#modal-06">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
-                                        <h3 class="folio-title">The Tandon</h3>
+                                        <h3 class="folio-title">Rock Paper War Scissors</h3>
                                         <span class="folio-types">
-                                          Web Design
+                                          Game Development
                                       </span>
                                     </div>
                                 </div>
