--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/portfolio/pulse3.png" alt="pulse">
+                            <img src="images/portfolio/pulse3" alt="pulse">
                             <a href="#modal-05" class="overlay" data-toggle="modal" data-target="#modal-05">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
@@ -465,7 +465,7 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/portfolio/rpws3.png" alt="rpws">
+                            <img src="images/portfolio/rpws3" alt="rpws">
                             <a href="#modal-06" class="overlay" data-toggle="modal" data-target="#modal-06">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
