--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/portfolio/pulse3" alt="pulse">
+                            <img src="images/portfolio/pulse3.PNG" alt="pulse">
                             <a href="#modal-05" class="overlay" data-toggle="modal" data-target="#modal-05">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
@@ -465,7 +465,7 @@
                     <!-- /folio-item -->
                     <div class="blockedGrid folio-item">
                         <div class="item-wrap">
-                            <img src="images/portfolio/rpws3" alt="rpws">
+                            <img src="images/portfolio/rpws3.PNG" alt="rpws">
                             <a href="#modal-06" class="overlay" data-toggle="modal" data-target="#modal-06">
                                 <div class="folio-item-table">
                                     <div class="folio-item-cell">
@@ -565,7 +565,7 @@
                             <div class="modal-content">
                                 <div class="modal-header media">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <img src="images/portfolio/modals/m-pulse3.png" alt="" />
+                                    <img src="images/portfolio/modals/m-pulse3.PNG" alt="" />
                                 </div>
                                 <div class="modal-body description-box">
                                     <h4>Pulse</h4>
@@ -585,7 +585,7 @@
                             <div class="modal-content">
                                 <div class="modal-header media">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <img src="images/portfolio/modals/m-rpws3.png" alt="" />
+                                    <img src="images/portfolio/modals/m-rpws3.PNG" alt="" />
                                 </div>
                                 <div class="modal-body description-box">
                                     <h4>Rock Paper War Scissors</h4>
