--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h1>Hi to you. Hello to me!</h1>
                 <div class="intro-info">
                     <img src="images/profile-pic.jpg" alt="Profile Picture">
-                    <p class="lead">I am currently a Senior at Polytechnic University, also known as NYU Tandon School of Engineering. I'm a computer science major that's also currnetly taking a minor in game design. I'm also an adrenaline junkie so I would love to take any chance I get to try something new that I find interesting. I plan on taking some time to myself after I finish college and save up a substantial amount of money to travel the world and visit unique places.</p>
+                    <p class="lead">I am graduate of Polytechnic University, also known as NYU Tandon School of Engineering, now renamed Tandon School of Engineering. I'm a computer science major that's also currnetly taking a minor in game design. I'm also an adrenaline junkie so I would love to take any chance I get to try something new that I find interesting. I plan on taking some time to myself after I finish college and save up a substantial amount of money to travel the world and visit unique places.</p>
                 </div>
             </div>
         </div>
@@ -107,7 +107,7 @@
         <div class="row about-content">
             <div class="column-six tab-full">
                 <h3>Profile</h3>
-                <p>I have spent most of my time working as an information technology at Poly. I spent a lot of my time working in a computer lab in which my co-workers and myself monitor and assist students who are currently engaged in using the equipement. I spent a few years back working a secreterial job so I was able to gain a good experience of organization. Other than that I've spent the time to work on personal projects of my own, most of them are currently still in development and are games oriented.</p>
+                <p>I have spent most of my time working in information technology at Poly. I spent a lot of my time working in a computer lab in which my co-workers and myself monitor and assist students who are currently engaged in using the equipement. I spent a few years back working a secreterial job so I was able to gain a good experience of organization. Other than that I've spent the time to work on personal projects of my own, most of them are currently still in development and are games oriented.</p>
                 <ul class="info-list">
                     <li>
                         <strong>Fullname:</strong>
@@ -120,10 +120,6 @@
                     <li>
                         <strong>Job:</strong>
                         <span>IT Technician</span>
-                    </li>
-                    <li>
-                        <strong>Website:</strong>
-                        <span>mahindrapersaud.me</span>
                     </li>
                     <li>
                         <strong>Email:</strong>
@@ -169,7 +165,7 @@
                         <strong>OpenGL</strong>
                     </li>
                     <li>
-                        <div class="progress percent50"><span>50%</span></div>
+                        <div class="progress percent50"><span>60%</span></div>
                         <strong>Python</strong>
                     </li>
                     <li>
@@ -178,7 +174,7 @@
                     </li>
                     <li>
                         <div class="progress percent70"><span>70%</span></div>
-                        <strong>Unity</strong>
+                        <strong>Unity C#</strong>
                     </li>
                 </ul>
                 <!-- /skill-bars -->
@@ -209,6 +205,48 @@
             <!-- /resume-header -->
             <div class="column-twelve">
                 <div class="timeline-wrap">
+                    <div class="timeline-block">
+                        <div class="timeline-ico">
+                            <i class="fa fa-briefcase"></i>
+                        </div>
+                        <div class="timeline-header">
+                            <h3>IT Technician</h3>
+                            <p>March 2015 - Present</p>
+                        </div>
+                        <div class="timeline-content">
+                            <h4>IT Technician</h4>
+                            <p>Supervised and managed IT employees and equipment. Trained technicians on operation and adjustment of hardware and printing system. Inspected and maintained secured network, lab hardware, and printing system for university-wide use.</p>
+                        </div>
+                    </div>
+                    <!-- /timeline-block -->
+                    <div class="timeline-block">
+                            <div class="timeline-ico">
+                                <i class="fa fa-briefcase"></i>
+                            </div>
+                            <div class="timeline-header">
+                                <h3>U•START</h3>
+                                <p>January 2018 - May 2018</p>
+                            </div>
+                            <div class="timeline-content">
+                                <h4>Programmer</h4>
+                                <p>Worked with a team of highly skilled professionals to create a next generation application. Primarily doing front-end work with some back-end assistance. Assisted in making the application versatile and user friendly</p>
+                            </div>
+                        </div>
+                        <!-- /timeline-block -->
+                    <div class="timeline-block">
+                        <div class="timeline-ico">
+                            <i class="fa fa-briefcase"></i>
+                        </div>
+                        <div class="timeline-header">
+                            <h3>Google Developer Challenge Scholarship</h3>
+                            <p>January 2018 - April 2018</p>
+                        </div>
+                        <div class="timeline-content">
+                            <h4>Mobile Web Specialist Track</h4>
+                            <p>Learned to develop mobile web applications using various tools such as service workers. Interacted with over ten thousand other students from around the world currently enrolled in the program. Developed skills with IndexedDB and Caching while learning about various mobile web application techniques</p>
+                        </div>
+                    </div>
+                    <!-- /timeline-block -->
                     <div class="timeline-block">
                         <div class="timeline-ico">
                             <i class="fa fa-briefcase"></i>
@@ -256,7 +294,7 @@
                         </div>
                         <div class="timeline-header">
                             <h3>Bachelor Degree</h3>
-                            <p>September 2013 - Present</p>
+                            <p>September 2013 - May 2018</p>
                         </div>
                         <div class="timeline-content">
                             <h4>Polytechnic University / NYU Tandon School of Engineering</h4>
