--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         </div>
                         <div class="timeline-header">
                             <h3>Poly Anime Society</h3>
-                            <p>September 2014 - Present</p>
+                            <p>September 2014 - May 2018</p>
                         </div>
                         <div class="timeline-content">
                             <h4>Member</h4>
