--- a/index.html
+++ b/index.html
@@ -750,6 +750,7 @@
     <!-- /services -->
     <!-- stats Section
    ================================================== -->
+   <!--
     <section id="stats" class="count-up">
         <div class="row">
             <div class="column-twelve">
@@ -765,7 +766,7 @@
                             Projects Completed
                         </h5>
                     </div>
-                    <!-- /stat -->
+                    <!-\- /stat ->
                     <div class="blockedGrid stat">
                         <div class="icon-part">
                             <i class="icon-users"></i>
@@ -777,7 +778,7 @@
                             Happy Clients
                         </h5>
                     </div>
-                    <!-- /stat -->
+                    <!-\- /stat ->
                     <div class="blockedGrid stat">
                         <div class="icon-part">
                             <i class="icon-badge"></i>
@@ -789,7 +790,7 @@
                             Awards Received
                         </h5>
                     </div>
-                    <!-- /stat -->
+                    <!-\- /stat ->
                     <div class="blockedGrid stat">
                         <div class="icon-part">
                             <i class="icon-light-bulb"></i>
@@ -801,7 +802,7 @@
                             Crazy Ideas
                         </h5>
                     </div>
-                    <!-- /stat -->
+                    <!-\- /stat ->
                     <div class="blockedGrid stat">
                         <div class="icon-part">
                             <i class="icon-cup"></i>
@@ -813,7 +814,7 @@
                             Coffee Cups
                         </h5>
                     </div>
-                    <!-- /stat -->
+                    <!-\- /stat ->
                     <div class="blockedGrid stat">
                         <div class="icon-part">
                             <i class="icon-clock"></i>
@@ -825,15 +826,16 @@
                             Hours Of Sleep A Day
                         </h5>
                     </div>
-                    <!-- /stat -->
+                    <!-\- /stat ->
                 </div>
-                <!-- /stats-list -->
+                <!-\- /stats-list ->
             </div>
-            <!-- /twelve -->
+            <!-\- /twelve ->
         </div>
-        <!-- /row -->
+        <!-\- /row ->
     </section>
-    <!-- /stats -->
+    <!- /stats ->
+    -->
     <!-- contact
    ================================================== -->
     <section id="contact">
