--- a/index.html
+++ b/index.html
@@ -504,6 +504,7 @@
                     </div>
                     <!-- modal popups - begin
                 ============================================================= -->
+                <div id = "containerDiv">
                     <div id="modal-01" class="modal fade" role="dialog">
                         <div class="modal-dialog">
                             <div class="modal-content">
@@ -626,6 +627,7 @@
                     <!-- /modal-06 -->
                     <!-- modal popups - end
                 ============================================================= -->
+                </div>
                 </div>
                 <!-- /portfolio-wrapper -->
             </div>
